[tool.poetry]
name = "geovisualization"
version = "0.1.0"
description = "CS530 Introduction to Scientific Visualization assignment 1 @Purdue."
authors = ["Shuang Wu <seanwu1105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
vtk = "^9.2.5"
pyside6 = "^6.4.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
black = "^22.12.0"
pre-commit = "^2.21.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
